static category visible bugfix

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5783,7 +5783,8 @@ i {
   position: absolute;
   width: 90%;
   background: #fff;
-  z-index: 1; }
+  z-index: 1;
+  visibility: hidden; }
   .vert-category li {
     width: 100%; }
   .vert-category a {
