--- a/resources/assets/sass/themes/category.scss
+++ b/resources/assets/sass/themes/category.scss
@@ -3,6 +3,7 @@
     width: 90%;
     background: #fff;
     z-index: 1;
+    visibility: hidden;
     li {
         width: 100%;
     }
